---------------------------------------------------------------------------------------------------
Version: 3.0.17
Date: ????
  Changes:
    - Fixed some techs having a too-fast cycle time
    - Fixed all techs added by "enable all feature flags" not being seen by autotech.
    - Renamed "Build a phytoplankton farm (Recipe)" recipe name to "Phytoplankton Farm MK 01 (Recipe)". Resolves https://github.com/pyanodon/pybugreports/issues/1215
---------------------------------------------------------------------------------------------------
Version: 3.0.16
Date: 2025-09-15
  Changes:
    - Remade tech tree with autotech 2.0. Science pack cost comparasion:
    - automation: n/a -> trigger
    - py1: 100 -> 100
    - logi: 360 -> 300
    - py2: 1300 -> 800
    - chem: 2000 -> 1400
    - py3: 2250 -> 1750
    - prod: 1750 -> 2250
    - py4: 2250 -> 3000
    - utility: 1500 -> 3300
    - space: 1000 -> 3600
    - phyrric: 3000 -> 8000
    - Added Dutch locale
---------------------------------------------------------------------------------------------------
Version: 3.0.15
Date: 2025-08-12
  Changes:
    - Fixed Bulk Inserter 1 and 2 technologies not having the correct prerequesites and dependants. Resolves https://github.com/pyanodon/pybugreports/issues/1086 and https://github.com/pyanodon/pybugreports/issues/1099
---------------------------------------------------------------------------------------------------
Version: 3.0.14
Date: 2025-4-12
  Changes:
    - Fixed a crash when combined with various mods that remove research triggers.
---------------------------------------------------------------------------------------------------
Version: 3.0.13
Date: 2025-3-3
  Changes:
    - Fixed some recipes not having defined catalysts
---------------------------------------------------------------------------------------------------
Version: 3.0.12
Date: 2025-2-26
  Changes:
    - Updated Ukrainian translation.