@@ -59,6 +59,9 @@ for i = 1, 4 do
         stack_size = 10
     }
 
+    -- scales 100, 400, 800, 1200
+    local output_size = 100 * (i > 1 and (4 * (i - 1)) or 1)
+
     ENTITY {
         type = "assembling-machine",
         name = name,
@@ -128,7 +131,7 @@ for i = 1, 4 do
                 production_type = "output",
                 pipe_picture = py.pipe_pictures("assembling-machine-3", nil, {-0.0, -0.95}, nil, nil),
                 pipe_covers = py.pipe_covers(true, true, true, true),
-                volume = 100,
+                volume = output_size,
                 pipe_connections = {{flow_direction = "output", position = {2.0, -3.0}, direction = defines.direction.north}},
                 priority = "extra-high"
             },
@@ -137,7 +140,7 @@ for i = 1, 4 do
                 production_type = "output",
                 pipe_picture = py.pipe_pictures("assembling-machine-3", nil, {-0.0, -0.95}, nil, nil),
                 pipe_covers = py.pipe_covers(true, true, true, true),
-                volume = 100,
+                volume = output_size,
                 pipe_connections = {{flow_direction = "output", position = {0.0, -3.0}, direction = defines.direction.north}}
             },
             --North3
@@ -145,7 +148,7 @@ for i = 1, 4 do
                 production_type = "output",
                 pipe_picture = py.pipe_pictures("assembling-machine-3", nil, {-0.0, -0.95}, nil, nil),
                 pipe_covers = py.pipe_covers(true, true, true, true),
-                volume = 100,
+                volume = output_size,
                 pipe_connections = {{flow_direction = "output", position = {-2.0, -3.0}, direction = defines.direction.north}}
             },
             --South
