@@ -3,6 +3,7 @@ Version: 3.0.17
 Date: ????
   Changes:
     - Fixed some techs having a too-fast cycle time
+    - Increased compressor output fluidbox size from 100 to 100, 400, 800, 1200 dependant on tier. Resolves https://github.com/pyanodon/pybugreports/issues/1203
     - Fixed all techs added by "enable all feature flags" not being seen by autotech.
     - Renamed "Build a phytoplankton farm (Recipe)" recipe name to "Phytoplankton Farm MK 01 (Recipe)". Resolves https://github.com/pyanodon/pybugreports/issues/1215
 ---------------------------------------------------------------------------------------------------
